Combat system + Character setup

--- a/2D Controller/Documentation.html
+++ b/2D Controller/Documentation.html
@@ -17,11 +17,11 @@
 
     <div class="main-page-division">
         <div class="page-title">
-            <span>2D Complete Character Controller</span>
+            <span>2D Combat-Ready Character Controller</span>
         </div>
         <h2>Overview</h2>
         <p>
-            Welcome to '<b>2D Complete Character Controller</b>', a powerful Unity asset that simplifies the integration of advanced character mechanics and combat
+            Welcome to '<b>2D Combat-Ready Character Controller</b>', a powerful Unity asset that simplifies the integration of advanced character mechanics and combat
             systems into your projects. This asset is crafted to streamline the development of dynamic and responsive characters, whether under <b>player</b> or <b>AI</b> control.
         </p>
         <br>
