--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/humanoid-controller.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/humanoid-controller.html
@@ -99,6 +99,10 @@
                     <td class="description">Reference to the '<a class="redirect-link" href="../CHARACTER-COMBAT/character-combat.html">CharacterCombat</a>' component</td>
                 </tr>
                 <tr>
+                    <td class="label"><a class="properties" href="../ENTITY-HEALTH/entity-health.html">entityHealth</a></td>
+                    <td class="description">Reference to the '<a class="redirect-link" href="../ENTITY-HEALTH/entity-health.html">EntityHealth</a>' component</td>
+                </tr>
+                <tr>
                     <td class="label"><a class="properties" href="../ENV-QUERY/PUBLIC-METHODS/set-active-collider.html">activeCollider</a></td>
                     <td class="description">Reference to the active '<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Collider2D.html">Collider2D</a>' of the character</td>
                 </tr>
