Combat System page

--- a/2D Controller/HTML/CLASSES/MANUAL/CHARACTER-DASH/character-dash.html
+++ b/2D Controller/HTML/CLASSES/MANUAL/CHARACTER-DASH/character-dash.html
@@ -53,7 +53,8 @@
                 <td class="description">
                     The GameObject to be spawned as the afterimage for the dash. (Optional)
                     <br>
-                    Note that if you provide a prefab in this field, it needs to have the <a class="redirect-link" href="../DASH-EFFECT/dash-effect.html">DashEffect</a> component attached.
+                    Note that if you provide a prefab in this field, it needs to have the <a class="redirect-link" href="../DASH-EFFECT/dash-effect.html">DashEffect</a> 
+                    component attached in order to work properly.
                 </td>
             </tr>
             <tr>
