--- a/2D Controller/HTML/CLASSES/SCRIPTING/DASH-EFFECT/dash-effect.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/DASH-EFFECT/dash-effect.html
@@ -28,6 +28,8 @@
         <h2>Description</h2>
         <p>
             This class is designed to manage the after-image effect of the dash mechanic within the asset.
+            <br><br>
+            <b>Note:</b> The class is utilized by the <a class="redirect-link" href="../../MANUAL/CHARACTER-DASH/character-dash.html">CharacterDash</a> class.
         </p>
         <br>
         <div class="table-division">
